@@ -4,6 +4,7 @@ import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.security.Keys;
 import online.palworldkorea.palworldkorea_online.global.exception.custom_exception.InvalidTokenException;
+import online.palworldkorea.palworldkorea_online.member.entity.MemberRole;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -11,6 +12,7 @@ import org.springframework.stereotype.Component;
 
 import javax.crypto.SecretKey;
 import java.security.Key;
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -26,14 +28,14 @@ public class JwtTokenUtil {
     @Value("${jwt.refreshTokenExpirationTime}")
     private long refreshTokenExpirationTime;
 
-    public String generateAccessToken( String email, List<GrantedAuthority> authorities) {
+    public String generateAccessToken( String email, List<MemberRole> authorities) {
         Date expiration = new Date(new Date().getTime() + accessTokenExpirationTime);
         SecretKey key = getKey();
 
         return generateNewToken(email, authorities, expiration, key);
     }
 
-    public String generateRefreshToken(String email, List<GrantedAuthority> authorities) {
+    public String generateRefreshToken(String email, List<MemberRole> authorities) {
         Date expiration = new Date(new Date().getTime() + refreshTokenExpirationTime);
 
         SecretKey key = getKey();
@@ -57,20 +59,19 @@ public class JwtTokenUtil {
         return getPayload(key, token).getSubject();
     }
 
-    public List<GrantedAuthority> getAuthoritiesFromToken(String token) {
+    public List<MemberRole> getAuthoritiesFromToken(String token) {
         SecretKey key = getKey();
-        List<String> authoritiesList = getPayload(key, token).get("authorities", List.class);
 
-        return authoritiesList.stream()
-                .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+        return getPayload(key, token).get("authorities", List.class).stream()
+                .map(authority -> MemberRole.valueOf((String)authority))
+                .toList();
     }
 
     private SecretKey getKey() {
         return Keys.hmacShaKeyFor(secretKey.getBytes());
     }
 
-    private String generateNewToken(String email, List<GrantedAuthority> authorities, Date expiration, SecretKey key) {
+    private String generateNewToken(String email, List<MemberRole> authorities, Date expiration, SecretKey key) {
         List<String> authoritiesStrings = authorities.stream()
                 .map(GrantedAuthority::getAuthority)
                 .toList();
@@ -92,7 +93,6 @@ public class JwtTokenUtil {
                     .parseSignedClaims(token)
                     .getPayload();
         } catch (Exception e) {
-            System.out.println(e.getMessage());
             throw new InvalidTokenException();
         }
     }
